Mon Jul 17 12:58:41 2006  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: should use ac_cv_lib_dl_dlopen=no on MinGW.

Mon Jul 17 11:47:35 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* st.c: still need to include config.h on some platforms.

Sat Jul 15 01:09:22 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (malloc): use xmalloc/xcalloc instead of plain
	  malloc/calloc, to detect memory allocation failure.  see
	  <http://www.nongnu.org/failmalloc/>.

Fri Jul 14 13:08:13 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: add methods for new features of latest Tcl/Tk8.5.

	* ext/tk/lib/tk/namespace.rb: ditto.

Fri Jul 14 02:30:12 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/monitor.rb: document patch from Hugh Sasse <hgs at dmu.ac.uk>.
	  [ruby-core:08205]

Fri Jul 14 00:10:15 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_pop): may cause realloc oscillation.  a patch
	  from MORITA Naoyuki <mlgetter at kidou.sakura.ne.jp>.
	  [ruby-dev:29028]

Thu Jul 13 22:23:56 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/composite.rb: improve handling of the classname on the 
	  option database for the widget class which includes TkComposite.

Thu Jul 13 00:40:57 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h (FIX2LONG): returns integer of size of VALUE.
	  [ruby-dev:29024]
	
	* ruby.h (FIX2ULONG): ditto.

Wed Jul 12 20:05:23 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (f_args): allow post mandatory arguments after optional
	  arguments.  [ruby-dev:29014]

	* parse.y (new_args_gen): allow post_args without rest_args.

	* eval.c (formal_assign): ditto.

	* parse.y (new_args_gen): check post argument duplication.

Tue Jul 11 20:58:18 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h: export rb_cMethod.  [ruby-talk:201259]

Tue Jul 11 19:13:33 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: remove restriction on the class of 