@@ -1,3 +1,13 @@
+Mon Jul 17 22:55:31 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ext/io/wait/wait.c (io_ready_p): protoize.
+
+Mon Jul 17 13:43:05 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* pack.c (define_swapx): should not use plain malloc.
+
+	* ext/curses/curses.c (curses_getmouse): ditto.
+
 Mon Jul 17 12:58:41 2006  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* configure.in: should use ac_cv_lib_dl_dlopen=no on MinGW.
